--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,7 @@
     "require": {
         "php": ">=7.3",
         "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0"
-    }
+    },
+    "minimum-stability": "dev"
+
 }
