--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,18 @@
     },
     "require": {
         "php": ">=7.3",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0"
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0",
+        "khaledneam/laravel-module-generator": "dev-main"
     },
-    "minimum-stability": "dev"
+   "minimum-stability": "dev",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/khaledneam/Laravel-Module-Generator.git"
+        }
+    ]
+
+
 
 }
